k8's stuffs/project_deployment_templates/Gateway-API-Traefik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same

    # block to enable HTTPS
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: secret-cert
    #         namespace: default
      # allowedRoutes:
      #   namespaces:
      #     from: Same
