k8's stuffs/project_deployment_templates/Gateway-API-Traefik/gatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-app
  namespace: default
spec:
  parentRefs:
  - name: traefik
    sectionName: http
    kind: Gateway

  hostnames:
  - "example-app.com"

  rules:
  - matches:
    - path:
        type: Exact
        value: /

    backendRefs:
    - name: example-service
      port: 80
      weight: 1
